# dash-router-examples

./: Dockerfile  Dockerfile.dash  Dockerfile.dev  Dockerfile.flash  README copy.md  README.md  app.py  appshell.py  dash_app.py  dev_app.py  docker-compose.yaml  flas  flash_app.py  helpers.py  pyproject.toml  stepper_app.py  testpayload.json  theme.py
__dash_pages__/_analytics/risk/: page.py
__dash_pages__/_analytics/underwriting/: page.py
__dash_pages__/ongoing_monitoring/checks/: page.py
__dash_pages__/ongoing_monitoring/history/: page.py
__dash_pages__/ongoing_monitoring/overview/: page.py
__dash_pages__/sales/: page.py
__dash_pages__/sales/_components/: tabs.py
__dash_pages__/sales/invoices/: page.py
_global_components/: notifications.py  sidebar.py
api/: sql_operator.py
api/config/: postgres.py  redis.py
app/: app.py  dash_app.py  dev_app.py  prefix_app.py  theme.py
app/api/: redis_cache.py  sql_operator.py
app/api/config/: postgres.py
app/api/models/: amazon.py  events.py
app/assets/: dash.nprogress.txt  styles.css
app/assets/data/: users.json
app/assets/java_script/: clientside.js
app/assets/lottie/: Abstract Isometric Loader #1.lottie  Dynamic Cube Line.json  Router128.json  Stream128.json
app/assets/style_modules/: header.css  landing_page.css  styles.css
app/dash_pages/nested_route/: callback.py  components.py  page.py
app/dash_pages/sales/: page.py
app/dash_pages/streaming/: page.py
app/dashboard/: api.py  models.py  page.py
app/dashboard/(revenue)/: page.py
app/dashboard/(sentiment)/: api.py  loading.py
app/dashboard/components/: select.py
app/global_components/: appshell.py  footer.py  header.py  location.py  notifications.py  sidebar.py  tabs.py  theme.py
app/monitoring/: cli.py  metrics.py
app/pages/: components.py  page.py
app/pages/nested_route/: callback.py  components.py  page.py
app/pages/sales/: page.py
app/pages/streaming/: models.py  page.py
app/streaming/: flask_stream.py  stream.py
app/utils/: helpers.py
app/utils/style_modules/: buttons.css  fonts.css  styles.css
assets/: clientside.js  dash.nprogress.js  dashAgGridComponentFunctions.js  gird.css  graph.css  styles.css  tabs.css
benchmarks/: benchmark-viz.ipynb  cpu_bound_dash.csv  cpu_bound_dash_w_sse.csv  cpu_bound_flash.csv  cpu_bound_flash_w_sse.csv  nhv_dash.csv  nhv_dash.csv.  nhv_flash.csv  super_heavy_net.csv
dash_pages/: page.py
dash_pages/nested_route/: components.py  page.py
dash_pages/sales/: page.py
flash/: app.py  appshell.py  helpers.py
flash/assets/: tabs.css
flash/pages/sales/: page.py
flash_pages/: page.py
flash_pages/nested_route/: callback.py  components.py  page.py
flash_pages/sales/: page.py
flash_pages/streaming/: models.py  page.py  sse_endpoint.py
flash_router/: .gitignore  pyproject.toml
global_components/: appshell.py  notifications.py  sidebar.py  theme.py
pages/: components.py  page1.py  page2.py
pages/files/: page.py
pages/sales/: page.py
streaming/: stream.py
utils/: constants.py
(+270 files in other folders)
