[tool.poetry]
name = "dash-router-examples"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash-mantine-components = "1.2.0"
dash-iconify = "^0.1.2"
orjson = "^3.10.15"
dash = "3.0.4"
pandas = "^2.2.3"
dash-ag-grid = "v31.3.1"
dash-aggrid-scales = "^0.2.1"
dash-dynamic-grid-layout = "^0.1.2"
dash-extensions = "2.0.0"
aiocache = "^0.12.3"
plotly = "6.0.1"
nbformat = "^5.10.4"
dash-flash = {path = "/Users/cgiessel/Documents/projects/flash/flash-package/dist/dash_flash-0.1.2rc3.tar.gz"}
dash-resizable-panels = "^0.1.0"
dash-snap-grid = "^0.1.0"
flash-router = {path = "/Users/cgiessel/Documents/projects/dash-projects/dash-router/dist/flash_router-0.3.0b1.tar.gz"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
