[tool.poetry]
name = "dash-router-examples"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
dash-mantine-components = "2.2.0"
dash-iconify = "^0.1.2"
dash = "3.2.0"
pandas = "^2.2.3"
dash-ag-grid = "v31.3.1"
aiocache = "^0.12.3"
plotly = "6.3.0"
nbformat = "^5.10.4"
dash-snap-grid = "^0.1.0"
sqlalchemy = "^2.0.41"
redis = "^6.1.0"
python-dotenv = "^1.1.0"
asyncpg = "^0.30.0"
uvicorn = "^0.34.2"
greenlet = "^3.2.2"
quart-compress = "^0.2.1"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
orjson = "^3.11.1"
dash-html-components = "^2.0.0"
flash-router = "^0.5.0b5"
psutil = "^5.9.8"
httpx = "^0.27.2"
rich = "^13.9.2"
dash-extensions = "^2.0.4"
dash-event-callback = {path = "vendors/dash_event_callback-1.0.2.tar.gz"}
matplotlib = "^3.10.5"
dash-flash = "1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dash-monitor = "app.monitoring.cli:main"
